# VueJs-Projects

./: package-lock.json  package.json
nexus-ai-platform/: index.html  package-lock.json  package.json  tailwind.config.js
nexus-ai-platform/src/: App.vue  index.css
nexus-ai-platform/src/components/: AppFooter.vue  FeatureCard.vue  Navigation.vue
nexus-ai-platform/src/router/: index.js
nexus-ai-platform/src/views/: Contact.vue  Home.vue  Services.vue  Solutions.vue
swift-wallet/backend/: .env  app.js  package-lock.json  package.json
swift-wallet/backend/controllers/: authController.js  transactionController.js
swift-wallet/backend/models/: Transaction.js  User.js
swift-wallet/backend/routes/: transactions.js
swift-wallet/frontend/: package.json
swift-wallet/frontend/src/api/: api.js
swift-wallet/frontend/src/store/: userStore.js
swiftwallet/backend/: README.md  package.json
swiftwallet/backend/src/: index.js
swiftwallet/frontend/: app.js  app.json
swiftwallet/frontend/common/: api.js
swiftwallet/frontend/components/: TransactionItem.vue
taskflow-pro/: README.md
taskflow-pro/backend/: .env  package-lock.json  package.json  server.js
taskflow-pro/backend/middleware/: auth.js
taskflow-pro/backend/models/: database.js
taskflow-pro/backend/routes/: auth.js  projects.js  tasks.js  users.js
taskflow-pro/frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
taskflow-pro/frontend/src/: App.vue  main.js
taskflow-pro/rust/analytics_service/: Cargo.toml
taskflow-pro/rust/analytics_service/src/: main.rs
(+44 files in other folders)
