[package]
name = "analytics_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
tower-http = { version = "0.4", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
